Fix content and contextual alignment in firefox

--- a/stylesheets/application.less
+++ b/stylesheets/application.less
@@ -206,6 +206,7 @@ a {
 		
 		&:first-of-type {
 			.border-radius(6px 6px 0 0);
+			height: 23px;
 			margin-top: -5px;
 		}
 	}
